--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "db:migrate": "npm run migrate --workspace=packages/database"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "tailwindcss": "^3.4.3",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "typescript": "^5"
   }
 }
