--- a/apps/mma-sim/vercel.json
+++ b/apps/mma-sim/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd ../.. && npm install && npm run build:mma",
+  "buildCommand": "cd ../.. && npm run build:mma",
   "outputDirectory": "apps/mma-sim/.next",
   "installCommand": "cd ../.. && npm install"
 }
